+ 添加公司简介页面

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
             </div>
             <div class="am-u-lg-8 am-u-md-10 am-padding-0">
                 <ul class="am-nav am-nav-pills am-align-right am-padding-vertical">
-                    <li class="am-active"><a href="#">首页</a></li>
+                    <li class="am-active"><a href="index.html">首页</a></li>
                     <li class="am-dropdown" data-am-dropdown>
                         <a href="javascript:;" class="am-dropdown-toggle" data-am-dropdown-toggle>公司简介</a>
                         <ul class="am-dropdown-content">
-                            <li><a href="#">公司介绍</a></li>
-                            <li><a href="#">发展历程</a></li>
-                            <li><a href="#">使用条款</a></li>
-                            <li><a href="#">隐私条款</a></li>
+                            <li><a href="company.html">公司介绍</a></li>
+                            <li><a href="company.html">发展历程</a></li>
+                            <li><a href="company.html">使用条款</a></li>
+                            <li><a href="company.html">隐私条款</a></li>
                         </ul>
                     </li>
                     <li class="am-dropdown" data-am-dropdown>
@@ -405,7 +405,17 @@
         </div>
         <!--//footer-->
         <!--smfooter-->
-        <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default am-hide-lg-only am-no-layout">
+        <div class="am-footer am-footer-default am-show-sm-only" data-am-widget="footer">
+            <div class="am-footer-switch">
+                <span class="am-footer-ysp">手机版</span><span class="am-footer-divider"> | </span><a href="#" class="am-footer-desktop">电脑版</a>
+            </div>
+            <div class="am-footer-miscs">
+                <span><a href="#">科尔乐</a> 版权所有</span><span>CopyRight©200x-20xx XXX Inc. <span>ICP备*****</span></span>
+            </div>
+        </div>
+        <!--//smfooter-->
+        <!--smnavbar-->
+        <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default am-show-sm-only am-no-layout">
             <ul class="am-navbar-nav am-cf am-avg-sm-3">
                 <li>
                     <a href="#">
@@ -425,9 +435,21 @@
                         <span class="am-navbar-label">分享</span>
                     </a>
                 </li>
+                <li>
+                    <a href="#">
+                        <span class="am-icon-comments-o"></span>
+                        <span class="am-navbar-label">聊天</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="am-icon-user-md"></span>
+                        <span class="am-navbar-label">个人</span>
+                    </a>
+                </li>
             </ul>
         </div>
-        <!--//smfooter-->
+        <!--//smnavbar-->
 		<!--[if (gte IE 9)|!(IE)]><!-->
 		<script src="assets/js/jquery.min.js"></script>
 		<!--<![endif]-->
